# kpr

./: CMakeLists.txt  README.md  kpr.cfg  kpr.cpp
include/: Agents.hpp  Customer.hpp  DecisionFunctions.hpp  Plots.hpp
src/: Agents.cpp  Customer.cpp  DecisionFunctions.cpp  Plots.cpp
